@@ -1,11 +1,12 @@
 #! /bin/sh
-# $NetBSD: test-simple,v 1.4 2017/01/31 14:33:54 mrg Exp $
+# $NetBSD: test-simple,v 1.5 2018/11/21 09:37:02 mrg Exp $
 
 test="$1"; shift
 bozohttpd="$1"; shift
 datadir="$1"; shift
 curdir="$1"; shift
 verbose="$1"; shift
+host="$1"; shift
 
 in="$curdir/$test.in"
 out="$curdir/$test.out"
@@ -20,7 +21,7 @@ fi
 
 bozotestport=11111
 
-${bozohttpd} "$@" "${datadir}" < "$in" > "$tmpout"
+${bozohttpd} "$@" "${datadir}" "${host}" < "$in" > "$tmpout"
 if "$curdir/html_cmp" cmp "$out" "$tmpout"; then
 	exit 0
 else
